<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        android:id="@+id/Registrasi"
        android:text="@string/tulisan_regis"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        />
    <EditText
        android:id="@+id/inusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Registrasi"
        android:hint="Masukkan Username"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/inpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inusername"
        android:hint="Masukkan Password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/inpasscek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inpass"
        android:hint="Masukkan Password Lagi"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:id="@+id/JeKel"
        android:text="@string/sex"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_below="@id/inpasscek"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_below="@id/JeKel"
        android:id="@+id/radio1"
        android:text="@string/man"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/JeKel"
        android:layout_toRightOf="@id/radio1"
        android:layout_marginLeft="@dimen/_110sdp"
        android:id="@+id/radio2"
        android:text="@string/woman"
        />
    <TextView
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:id="@+id/provinsii"
        android:text="@string/prov"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_below="@id/radio1"
        />
    <Spinner
        android:id="@+id/provinsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/provinsii"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:id="@+id/kota"
        android:text="@string/kota"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_below="@id/provinsi"
        />
    <Spinner
        android:id="@+id/kotkab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kota"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/kotkab"
        android:hint="Alamat"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:layout_below="@id/alamat"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_60sdp"
        android:id="@+id/tombolacc"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/tulisan_regis"
        />
    <Button
        android:layout_toRightOf="@id/tombolacc"
        android:layout_below="@id/alamat"
        android:color="@color/black"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:id="@+id/tombolcancel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/cancel"
        />

</RelativeLayout>
